--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,3 +6,10 @@ jobs:
       steps:
         - uses: actions/checkout@v3
         - run: make check
+    build:
+      runs-on: ubuntu-latest
+      container: leshiy1295/gcc_linters_valgrind_cmake_gtest
+      needs: [check]
+      steps:
+        - uses: actions/checkout@v3
+        - run: make build
