Исправлены замечания. Добавлена проверка valgrind'ом

--- a/project/CMakeLists.txt
+++ b/project/CMakeLists.txt
@@ -1,4 +1,4 @@
 INCLUDE_DIRECTORIES(include)
-ADD_LIBRARY(matrix STATIC src/Matrix.cpp)
+ADD_LIBRARY(matrix STATIC src/Tmp.cpp)
 
 ADD_SUBDIRECTORY(tests)
