--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,4 +20,11 @@ jobs:
       steps:
         - uses: actions/checkout@v3
         - run: make test 
+    memtest:
+      runs-on: ubuntu-latest
+      container: leshiy1295/gcc_linters_valgrind_cmake_gtest
+      needs: [build]
+      steps:
+        - uses: actions/checkout@v3
+        - run: make memtest 
 
