Добавлено авл дерево, реализованы пункты 1, 3, 4

--- a/CPPLINT.cfg
+++ b/CPPLINT.cfg
@@ -6,3 +6,6 @@ filter=-legal/copyright
 filter=-build/include_subdir
 filter=-build/include
 filter=-readability/casting
+filter=-runtime/references
+filter=-whitespace/indent
+filter=-readability/braces
