Добавлены некоторые тесты

--- a/project/tests/CMakeLists.txt
+++ b/project/tests/CMakeLists.txt
@@ -3,8 +3,12 @@ FIND_PACKAGE(Threads REQUIRED)
 
 ADD_EXECUTABLE(
         tests
+        src/main.cpp
+        src/constructorstest.cpp
+        src/sizetest.cpp
+        src/inserttest.cpp
 )
-TARGET_LINK_LIBRARIES(tests ${GTEST_BOTH_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} matrix -lstdc++fs)
+TARGET_LINK_LIBRARIES(tests ${GTEST_BOTH_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} set -lstdc++fs)
 
 
 SET (TEST_COMMAND ${CMAKE_BINARY_DIR}/project/tests/tests)
